--- a/FYH.Cookbook.Web/Views/Shared/Error.cshtml
+++ b/FYH.Cookbook.Web/Views/Shared/Error.cshtml
@@ -1,9 +1,11 @@
-﻿@model System.Web.Mvc.HandleErrorInfo
+﻿@using FYH.Cookbook.Model.CustomException
+@model System.Web.Mvc.HandleErrorInfo
 
 @{
     ViewBag.Title = "Error";
+    var errorMessage = Model != null && Model.Exception is CbBaseException ? Model.Exception.Message : "An error occurred while processing your request.";
 }
 
-<h1 class="text-danger">Error.</h1>
-<h2 class="text-danger">An error occurred while processing your request.</h2>
+<h1 class="text-danger">Sorry</h1>
+<h2 class="text-danger">@errorMessage</h2>
 
