--- a/FYH.Cookbook.Web/Content/Site.css
+++ b/FYH.Cookbook.Web/Content/Site.css
@@ -38,6 +38,7 @@
 }
 
 .btn-lg {
+    font-size: 100%;
     width: 90px;
 }
 
@@ -94,4 +95,14 @@
 .media-object {
     width: 64px;
     height: 50px;
+}
+
+@media print {
+    .modal, .modal-dialog, .print-hide {
+        display: none;
+    }
+
+    .print-show {
+        display: block;
+    }
 }
